fix: Added ![defined] rule for ak-avatar and vertical align to remove the extra gap from imgs
affects: ak-avatar

--- a/packages/ak-avatar/src/host.less
+++ b/packages/ak-avatar/src/host.less
@@ -23,4 +23,8 @@
     height: @ak-avatar-size-xlarge;
     width: @ak-avatar-size-xlarge;
   }
+
+  &:not([defined]) {
+    display: none;
+  }
 }
