--- a/packages/ak-avatar/src/shadow.less
+++ b/packages/ak-avatar/src/shadow.less
@@ -6,4 +6,5 @@ img {
   height: 100%;
   margin: 0 auto;
   width: 100%;
+  vertical-align: bottom;
 }
